fix: 修复创建sheet方法参数问题
