# openapi.yaml
@@ -128,11 +128,11 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                sheetName:
                   type: string
                   description: 工作表名称
               required:
-                - name
+                - sheetName
       responses:
         '200':
           description: Successfully created sheet
